# Abraxas

./: .gitignore  .gitmodules
src/abraxas/carton/: ax_biomeifc.cpp  ax_biomeifc.h
src/abraxas/elems/: ax_axial.h  ax_camera.h  ax_light.h  ax_mesh.cpp  ax_mesh.h  ax_userinput.h
src/abraxas/mosaic/: al_abraxasapp.cpp  al_abraxasapp.h  al_appscreen.cpp  al_proppanel.cpp  ax_abraxasapp.h  ax_appscreen.h  ax_iguilets.h  ax_imwidgets.h  ax_plotvw.cpp  ax_plotvw.h  ax_proppanel.cpp  ax_proppanel.h  ax_scenevw.cpp  ax_scenevw.h  ax_uictxt.cpp  ax_uictxt.h
src/abraxas/render/: ax_glbuffers.cpp  ax_glbuffers.h  ax_glctxt.cpp  ax_glctxt.h  ax_shader.cpp  ax_shader.h
src/console/: al_main.cpp  ax_docktest.cpp  ax_main.cpp  ax_plottest.cpp
src/utils/: ax_includes.h
tools/cmake/: CMakeLists.txt
workdir/: imgui.ini
